# stockpile

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .processing_status.json  .vercelignore  BROLL_INTEGRATION_PLAN.md  BUG_FIX_SUMMARY.md  CLAUDE.md  COMPETITIVE_ANALYSIS_IMPLEMENTATION.md  Dockerfile  MOSS_TTSD_DEPLOY.md  P1-1_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_PHASE3_TEST_RESULTS.md  README.md  RELIABILITY_IMPROVEMENTS_TEST_RESULTS.md  START_WEB_UI.md  TTS_SETUP.md  UPGRADE_PLAN.md  VIDEO_AGENT_PLAN.md  batch_config.example.json  batch_process.py  better-clips-plan.md  ideas.md  improvements-plan-24-jan.md  pyproject.toml  reference_video_analysis.md  render.yaml  requirements-deploy.txt  requirements.txt  run_test.sh  run_with_preferences.py  start.py  start_backend.sh  start_frontend.sh  stockpile-backend.spec  stockpile_video_plan.md
.cache/ai_responses/: cache.db
.github/workflows/: build-moss.yml
.stockpile/: feedback.json
notebooks/: Chatterbox_TTS_Extended_Server.ipynb  colab_tts_cloudflare.sh  colab_tts_cloudflare_quick.sh  colab_tts_setup.sh
runpod-chatterbox-extended-worker/: Dockerfile  handler.py  requirements.txt
runpod-moss-ttsd-worker/: Dockerfile  Dockerfile.slim  handler.py  requirements.txt
runpod-qwen3-tts-worker/: Dockerfile  handler.py  requirements.txt
runpod-tts-worker/: Dockerfile  handler.py  requirements.txt
scripts/: build-app.sh  build-sidecar.sh  fetch_voices.py  fetch_voices_clean.py  fetch_voices_freesound.py  migrate_voices_to_turso.py  setup-moss-ttsd.sh
src/: broll_processor.py  main.py  outlier_finder.py
src.backup.20260123_131734/: broll_processor.py
src.backup.20260123_131734/models/: __init__.py  broll_need.py
src.backup.20260123_131734/services/: ai_service.py  interactive_ui.py  transcription.py  video_downloader.py
src/api/: __init__.py  dependencies.py  job_store.py  schemas.py  server.py  websocket_manager.py
src/cli/: __init__.py  index_channels.py
src/models/: __init__.py  broll_need.py  bulk_image.py  clip.py  dataset_generator.py  feedback.py  image.py  image_generation.py  outlier.py  storyboard.py  style.py  tts.py  user_preferences.py  video.py
src/services/: ai_service.py  bulk_image_service.py  channel_indexer.py  clip_extractor.py  dataset_generator_service.py  feedback_service.py  file_organizer.py  image_downloader.py  image_generation_service.py  interactive_ui.py  music_service.py  outlier_finder_service.py  r2_storage.py  reddit_monitor.py  scene_extractor.py  semantic_verifier.py  storyboard_service.py  transcription.py  transcription_planning_service.py  tts_service.py  video_acquisition_service.py  video_cache.py  video_downloader.py  video_filter.py  video_gen_service.py  video_search_service.py  visual_matcher.py  voice_library.py  youtube_api_service.py
src/utils/: cache.py  checkpoint.py  config.py  cost_tracker.py  logging.py  progress.py  retry.py
src/video_agent/: __init__.py  agent.py  broll_adapter.py  director.py  models.py  script_generator.py  subtitle_engine.py  video_composer.py
tests/: conftest.py
tests/integration/: test_director_integration.py  test_pipeline.py  test_semantic_pipeline.py
tests/unit/: test_ai_service.py  test_cache.py  test_clip_extractor.py  test_director.py  test_enhanced_search.py  test_features.py  test_models.py  test_parallel_downloader.py  test_scene_extractor.py  test_semantic_verifier.py  test_transcription.py  test_tts_preprocessing.py  test_tts_service.py  test_video_composer_transitions.py  test_video_filter.py  test_video_sources.py  test_visual_matcher.py  test_youtube_broll.py
web/: .gitignore  README.md  inactive-youtube-channels-research.md  index.html  package-lock.json  package.json  vite.config.ts  voice-reference-research.md
web/src/: App.css  App.tsx  config.ts  index.css  main.tsx  types.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: claude_json.rs  main.rs  pty.rs  sidecar.rs
webapp/: package.json  tailwind.config.js
webapp/app/: globals.css  layout.tsx  page.tsx
webapp/hooks/: use-timeline.ts
webapp/lib/: api.ts  utils.ts  (+1 more)
(+158 files in other folders)
